--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 					<img src="images/slide02.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>Lorem ipsum dolor sit amet nullam feugiat</p>
-							<h2>Magna etiam</h2>
+							<p>Una isla paradisiaca</p>
+							<h2>Margarita</h2>
 						</header>
 					</div>
 				</article>
@@ -52,8 +52,8 @@
 					<img src="images/slide03.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
-							<h2>Tempus dolor</h2>
+							<p>The largest waterfall in the world</p>
+							<h2>El Salto Angel</h2>
 						</header>
 					</div>
 				</article>
@@ -61,8 +61,8 @@
 					<img src="images/slide04.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Adipiscing lorem ipsum feugiat sed phasellus consequat</p>
-							<h2>Etiam feugiat</h2>
+							<p>Una isla paradisiaca</p>
+							<h2>Venezuela</h2>
 						</header>
 					</div>
 				</article>
