--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 					<img src="images/slide04.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Una isla paradisiaca</p>
-							<h2>Venezuela</h2>
+							<p>Vale do Lobo</p>
+							<h2>Algarve</h2>
 						</header>
 					</div>
 				</article>
@@ -70,8 +70,8 @@
 					<img src="images/slide05.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Ipsum dolor sed magna veroeros lorem ipsum</p>
-							<h2>Lorem adipiscing</h2>
+							<p>playas del caribe</p>
+							<h2>Venezuela</h2>
 						</header>
 					</div>
 				</article>
