--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						<li><a href="https://twitter.com/pablosario" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/pablo.rosario/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/pdelrc/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="mailto: abc@example.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="mailto: pdelrc@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
