--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>maecenas sapien feugiat ex purus</p>
-										<h2>Lorem ipsum dolor</h2>
+										<p>The four most dangerous words in investing are: “This time it's different”</p>
+										<h2>Stock Market</h2>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+									<p> It is a place where shares of pubic listed companies are traded. The primary market is where companies float shares to the general public in an initial public offering (IPO) to raise capital.</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="https://www.marketwatch.com/" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -107,12 +107,12 @@
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>mattis elementum sapien pretium tellus</p>
-										<h2>Vestibulum sit amet</h2>
+										<p>Time is more valuable than money</p>
+										<h2>Cryptocurrencies</h2>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+									<p> Cryptocurrencies are systems that allow for the secure payments online which are denominated in terms of virtual "tokens," which are represented by ledger entries internal to the system. "Crypto" refers to the various encryption algorithms and cryptographic techniques that safeguard these entries, such as elliptical curve encryption, public-private key pairs, and hashing functions.</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="https://coinmarketcap.com/" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -126,8 +126,8 @@
 			<section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
+						<p>there are 195 countries all over the world</p>
+						<h2><a href="https://www.google.com/maps">world map</a></h2>
 					</header>
 				</div>
 			</section>
@@ -136,8 +136,8 @@
 			<section id="three" class="wrapper style2">
 				<div class="inner">
 					<header class="align-center">
-						<p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
+						<p class="special">carry on reading all the info we have on here</p>
+						<h2>more topics</h2>
 					</header>
 					<div class="gallery">
 						<div>
@@ -176,7 +176,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Pablo Castejon - Portugal
+					Pablo Castejon - Portugal
 				</div>
 			</footer>
 
