--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 			<section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>there are 195 countries all over the world</p>
-						<h2><a href="https://www.google.com/maps">world map</a></h2>
+						<p>195 countries all over the world</p>
+						<h2><a href="https://www.google.com/maps">World map</a></h2>
 					</header>
 				</div>
 			</section>
