--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Hielo <span>by Pablo</span></a></div>
+				<div class="logo"><a href="index.html">Hielo <span>by Pablo Castejon</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -89,7 +89,7 @@
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>The four most dangerous words in investing are: “This time it's different”</p>
+										<p>Tell me where I’m going to die so that I won’t go there.</p>
 										<h2>Stock Market</h2>
 									</header>
 									<p> It is a place where shares of pubic listed companies are traded. The primary market is where companies float shares to the general public in an initial public offering (IPO) to raise capital.</p>
@@ -110,7 +110,7 @@
 										<p>Time is more valuable than money</p>
 										<h2>Cryptocurrencies</h2>
 									</header>
-									<p> Cryptocurrencies are systems that allow for the secure payments online which are denominated in terms of virtual "tokens," which are represented by ledger entries internal to the system. "Crypto" refers to the various encryption algorithms and cryptographic techniques that safeguard these entries, such as elliptical curve encryption, public-private key pairs, and hashing functions.</p>
+									<p> Cryptocurrencies are systems that allow for the secure payments online which are denominated in terms of virtual "tokens," which are represented by ledger entries internal to the system. "Crypto" refers to the various encryption algorithms and cryptographic techniques that safeguard these entries.</p>
 									<footer class="align-center">
 										<a href="https://coinmarketcap.com/" class="button alt">Learn More</a>
 									</footer>
