--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<div class="inner">
 						<header>
 							<p>The largest waterfall in the world</p>
-							<h2>El Salto Angel</h2>
+							<h2>Salto Angel</h2>
 						</header>
 					</div>
 				</article>
