--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Hielo by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 	<head>
 		<title>Hielo Pablo</title>
@@ -34,7 +30,7 @@
 					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>a capitale Portuguesa <a href="https://templated.co">FADO</a></p>
+							<p>A capitale Portuguesa</p>
 							<h2>Lisbon</h2>
 						</header>
 					</div>
@@ -176,7 +172,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					Pablo Castejon - Portugal
+					&copy; 2020. PAblo CAstejon. All rights reserved.
 				</div>
 			</footer>
 
