--- a/generic.html
+++ b/generic.html
@@ -28,7 +28,7 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>“The Earth is what we all have in common.</p>
+						<p>The Earth is what we all have in common.</p>
 						<h2>Our planet</h2>
 					</header>
 				</div>
