--- a/generic.html
+++ b/generic.html
@@ -65,7 +65,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; 2020. PAblo CAstejon. All rights reserved.
+					&copy; 2020. Pablo Castejon. All rights reserved.
 				</div>
 			</footer>
 
