--- a/index.html
+++ b/index.html
@@ -168,11 +168,12 @@
 						<li><a href="https://twitter.com/pablosario" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/pablo.rosario/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/pdelrc/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/pdelrc" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto: pdelrc@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; 2020. PAblo CAstejon. All rights reserved.
+					&copy; 2020. Pablo Castejon. All rights reserved.
 				</div>
 			</footer>
 
