--- a/index.html
+++ b/index.html
@@ -138,22 +138,22 @@
 					<div class="gallery">
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://edabit.com/challenges/javascript"><img src="images/pic01.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://www.marketwatch.com/"><img src="images/pic02.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="https://coinmarketcap.com/"><img src="images/pic03.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="https://www.w3schools.com/"><img src="images/pic04.jpg" alt="" /></a>
 							</div>
 						</div>
 					</div>
@@ -168,7 +168,7 @@
 						<li><a href="https://twitter.com/pablosario" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/pablo.rosario/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/pdelrc/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/pdelrc" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/pdelrc" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="mailto: pdelrc@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
