--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 						<li><a href="https://www.facebook.com/pablo.rosario/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/pdelrc/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/pdelrc" class="icon fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/pdelrc/" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
 						<li><a href="mailto: pdelrc@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
