--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 						<li><a href="mailto: pdelrc@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
+				<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="pdelrc"><a class="LI-simple-link" href='https://pt.linkedin.com/in/pdelrc/en-us?trk=profile-badge'>Pablo Castejon</a></div>
 				<div class="copyright">
 					&copy; 2020. Pablo Castejon. All rights reserved.
 				</div>
@@ -184,6 +185,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></
 
 	</body>
 </html>
