--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>Time is more valuable than money</p>
+										<p>Time is more valuable than money.</p>
 										<h2>Cryptocurrencies</h2>
 									</header>
 									<p> Cryptocurrencies are systems that allow for the secure payments online which are denominated in terms of virtual "tokens," which are represented by ledger entries internal to the system. "Crypto" refers to the various encryption algorithms and cryptographic techniques that safeguard these entries.</p>
