--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				</div>
 				
 				<div class="copyright">
-					&copy; 2020. Pablo Castejon. All rights reserved.
+					&copy; 2020. Pablo Del Rosario. All rights reserved.
 				</div>
 			</footer>
 
