--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>A capitale Portuguesa</p>
+							<p>A capital Portuguesa</p>
 							<h2>Lisbon</h2>
 						</header>
 					</div>
