--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 										<p>Tell me where I’m going to die so that I won’t go there.</p>
 										<h2>Stock Market</h2>
 									</header>
-									<p> It is a place where shares of pubic listed companies are traded. The primary market is where companies float shares to the general public in an initial public offering (IPO) to raise capital.</p>
+									<p> It is a place where shares of pubic listed companies are traded... The primary market is where companies float shares to the general public in an initial public offering (IPO) to raise capital.</p>
 									<footer class="align-center">
 										<a href="https://www.marketwatch.com/" class="button alt">Learn More</a>
 									</footer>
