--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<img src="images/slide04.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Vale do Lobo</p>
+							<p>Vale do Lobo.</p>
 							<h2>Algarve</h2>
 						</header>
 					</div>
