--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<p>195 countries all over the world</p>
-						<h2><a href="https://www.google.com/maps">World map</a></h2>
+						<h2><a href="https://www.google.com/maps">World map.</a></h2>
 					</header>
 				</div>
 			</section>
